--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-    color: #51f120;
+    color: #000;
 }
 
 button {
@@ -20,5 +20,14 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #a1a2a2;
+}
+.abc{
+    padding: 15px 25px;
+    font-size: 20px;
+    background-color: #08ff94;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+
 }
